--- a/ui_py_ino/Proyecto U1/line_edit.ui
+++ b/ui_py_ino/Proyecto U1/line_edit.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>476</width>
-    <height>235</height>
+    <height>176</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -68,25 +68,12 @@
      </font>
     </property>
    </widget>
-   <widget class="QLineEdit" name="le_texto">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>130</y>
-      <width>451</width>
-      <height>51</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>90</y>
-      <width>261</width>
+      <width>441</width>
       <height>31</height>
      </rect>
     </property>
@@ -96,7 +83,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Texto de arduino</string>
+     <string>DESCONECTADO</string>
     </property>
    </widget>
   </widget>
